--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="image.jpg"  width="200">  <p></p>
 
     <p>
-        自2021年起，我任职于首都经济贸易大学数据科学系，担任讲师。此前，我于2021年获得北京大学数学学院理学博士学位，师从杨建省教授与马尽问教授。我的本科教育则就读于中国海洋大学数学科学学院，并于2016年取得理学学士学位。目前，我的研究兴趣主要集中在人工智能、计算机视觉和机器学习等领域。
+        自2021年起，我任职于首都经济贸易大学数据科学系，担任讲师。此前，我于2021年获得北京大学数学科学学院理学博士学位，师从杨建生教授与马尽文教授。我本科就读于中国海洋大学数学科学学院信息与计算科学专业，并于2016年取得理学学士学位。目前，我的研究兴趣主要集中在人工智能、计算机视觉和机器学习等领域。
     </p>
 
 
