--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h2>Links</h2>
     <ul>
-        <li><a href="https://github.com/qingxiaoli/qingxiaoli.github.io/blob/5b906d713dad8681889331c7ff37a49ad1a9022e/Academic_CV__Xiaoqing_Li.pdf">CV</a></li>
+        <li><a href="https://raw.githubusercontent.com/qingxiaoli/qingxiaoli.github.io/main/Academic_CV__Xiaoqing_Li.pdf">CV</a></li>
         <li><a href="https://scholar.google.com/citations?user=lqNq284AAAAJ&hl=zh-CN&oi=sra">Google Scholar</a></li>
     </ul>
 
