--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h2>Links</h2>
     <ul>
-        <li><a href="https://github.com/qingxiaoli/qingxiaoli.github.io/raw/main/Academic_CV__Xiaoqing_Li%20.pdf">CV</a></li>
+        <embed src="https://raw.githubusercontent.com/qingxiaoli/qingxiaoli.github.io/main/Academic_CV__Xiaoqing_Li%20.pdf" type="application/pdf" width="800px" height="1000px">
         <li><a href="https://scholar.google.com/citations?user=lqNq284AAAAJ&hl=zh-CN&oi=sra">Google Scholar</a></li>
     </ul>
 
