--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         Since 2021, I have been a Lecturer in the Department of Data Science at Capital University of Economics and Business. Prior to this, I received my Ph.D. in Science from the School of Mathematical Sciences, Peking University in 2021, under the supervision of Professor Jiansheng Yang and Professor Jinwen Ma. I obtained my Bachelor of Science degree from the School of Mathematical Sciences, Ocean University of China in 2016. Currently, my research interests primarily lie in the areas of Artificial Intelligence, Computer Vision, and Machine Learning.
     </p>
 
-    <h2>Links</h2>
-    <ul>
-        <embed src="https://raw.githubusercontent.com/qingxiaoli/qingxiaoli.github.io/main/Academic_CV__Xiaoqing_Li%20.pdf" type="application/pdf" width="800px" height="1000px">
-        <li><a href="https://scholar.google.com/citations?user=lqNq284AAAAJ&hl=zh-CN&oi=sra">Google Scholar</a></li>
-    </ul>
+   <h2>Links</h2>
+    <ul>
+        <li><embed src="https://raw.githubusercontent.com/qingxiaoli/qingxiaoli.github.io/main/Academic_CV__Xiaoqing_Li%20.pdf" type="application/pdf" width="800px" height="1000px"></embed></li>
+        <li><a href="https://scholar.google.com/citations?user=lqNq284AAAAJ&hl=zh-CN&oi=sra">Google Scholar</a></li>
+    </ul>
 
 </body>
 </html>
