--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
    <h2>Links</h2>
     <ul>
-        <li><a href="https://raw.githubusercontent.com/qingxiaoli/qingxiaoli.github.io/main/Academic_CV__Xiaoqing_Li%20.pdf" target="_blank">CV</a></li>
-        <li><a href="https://scholar.google.com/citations?user=lqNq284AAAAJ&hl=zh-CN&oi=sra">Google Scholar</a></li>
+       <li> <a href="https://qingxiaoli.github.io/files/Academic_CV__Xiaoqing_Li.pdf" target="_blank">CV</a></li>
+       <li><a href="https://scholar.google.com/citations?user=lqNq284AAAAJ&hl=zh-CN&oi=sra">Google Scholar</a></li>
     </ul>
 
 </body>
