--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>李晓晴 / Xiaoqing Li</title>
+    <title>李晓晴 | Xiaoqing Li</title>
 </head>
 <body>
 
